# VkloudShellExt

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  conanfile.txt
src/: CMakeLists.txt  ContextMenuExtension.cpp  ContextMenuExtension.h  DllMain.cpp  ExportFunctions.def  ExtensionFactory.cpp  ExtensionFactory.h
src/Control/: NamedPipeClient.cpp  NamedPipeClient.h
src/Utils/: ComClass.h  Handle.h  RegisterHelper.cpp  RegisterHelper.h
